<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_station">

    <fragment
        android:id="@+id/navigation_station"
        android:name="br.com.levezcode.demoapp.presentation.station.view.StationFragment"
        android:label="@string/title_station"
        tools:layout="@layout/station_fragment" />

    <fragment
        android:id="@+id/navigation_sensors"
        android:name="br.com.levezcode.demoapp.presentation.sensors.view.SensorFragment"
        android:label="@string/title_sensors"
        tools:layout="@layout/sensor_fragment" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="br.com.levezcode.demoapp.presentation.maps.view.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/maps_fragment" />

</navigation>